Initial POC code

--- a/Reports/Report.tex
+++ b/Reports/Report.tex
@@ -44,7 +44,7 @@
 
 %%% END Article customizations
 
-\title{MMIX Simulator using Multiple Programming Paradigms}
+\title{Component Based MMIX Simulator using Multiple Programming Paradigms}
 \author{Stephen Edmans}
 %\date{} % Activate to display a given date or no date (if empty),
 
@@ -53,6 +53,7 @@
 \newpage
 \tableofcontents
 \newpage
+\section{Abstract}
 \section{Introduction}
 \section{Background}
 Professor Donald Knuth of Stanford University has designed aa
